tests/snapshots/integration__integration_tests__help__help_beta.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - beta
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
---
success: true
exit_code: 0
----- stdout -----
wt beta - Development and testing utilities
Usage: wt beta [OPTIONS] <COMMAND>

Commands:
  run-hook  Run project hook
  commit    Commit changes with LLM message
  squash    Squash commits with LLM message
  push      Push changes to local target branch
  rebase    Rebase onto target
  select    Interactive worktree selector

Options:
  -h, --help
      Print help

Global Options:
  -C <path>
      Change working directory

  --config <path>          
      User config file path

  -v, --verbose
      Show commands and debug info

----- stderr -----
