tests/snapshots/integration__integration_tests__help__help_step_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - step
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt step - Run individual operations

Usage: [1m[36mwt step[0m [36m[OPTIONS][0m [36m<COMMAND>

[1m[32mCommands:
  [1m[36mcommit[0m        Commit changes with LLM commit message
  [1m[36msquash[0m        Squash commits since branching
  [1m[36mpush[0m          Fast-forward target to current branch
  [1m[36mrebase[0m        Rebase onto target
  [1m[36mcopy-ignored[0m  Copy gitignored files to another worktree
  [1m[36mfor-each[0m      [experimental] Run command in each worktree

[1m[32mOptions:
  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...
          Show debug info (-v), or also write diagnostic report (-vv)

Run individual git workflow operations: commits, squashes, rebases, and pushes.

[1m[32mExamples

Commit with LLM-generated message:

  [2mwt step commit

Manual merge workflow with review between steps:

  [2mwt step commit
  [2mwt step squash
  [2mwt step rebase
  [2mwt step push

[1m[32mOperations

- [2mcommit[0m — Stage and commit with LLM-generated message
- [2msquash[0m — Squash all branch commits into one with LLM-generated message
- [2mrebase[0m — Rebase onto target branch
- [2mpush[0m — Fast-forward target to current branch
- [2mcopy-ignored[0m — Copy gitignored files between worktrees
- [2mfor-each[0m — [experimental] Run a command in every worktree

[1m[32mOptions

[32m`--stage`

Controls what to stage before committing. Available for [2mcommit[0m and [2msquash[0m:

    Value                         Behavior                         
   ─────── ─────────────────────────────────────────────────────── 
   all     Stage all changes including untracked files (default)   
   tracked Stage only modified tracked files                       
   none    Don't stage anything, commit only what's already staged 

  [2mwt step commit --stage=tracked
  [2mwt step squash --stage=none

Configure the default in user config:

  [2m[commit]
  [2mstage = "tracked"

[32m`--show-prompt`

Output the rendered LLM prompt to stdout without running the command. Useful for inspecting prompt templates or piping to other tools:

  [2m# Inspect the rendered prompt
  [2mwt step commit --show-prompt | less
  [2m
  [2m# Pipe to a different LLM
  [2mwt step commit --show-prompt | llm -m gpt-5-nano

[1m[32mSee also

- [2mwt merge[0m — Runs commit → squash → rebase → hooks → push → cleanup automatically
- [2mwt hook[0m — Run configured hooks
